# Project-Parrot

./: .gitignore  Cargo.toml  Conversation.md  Playaround  README.md  requirements-app.txt  requirements-unified.txt  requirements.txt
benchmarks/: README.md  cleanup_cases.jsonl
benchmarks/cleanup_qwen25_instruct/: details.csv  details.json  summary.csv  summary.json
benchmarks/parakeet_smoke/: parakeet-tdt-0.6b-v3-onnx.json  report.html  summary.csv
benchmarks/sleep_ready_final/: faster-whisper-large-v3-turbo.json  faster-whisper-medium.en.json  faster-whisper-small.en.json  moonshine-medium.json  moonshine-small.json  parakeet-tdt-0.6b-v3-onnx.json  report.html  summary.csv
benchmarks/suite_100/: combined_report.html  combined_summary.csv
benchmarks/suite_100/common-voice/: faster-whisper-large-v3-turbo.json  faster-whisper-medium.en.json  faster-whisper-small.en.json  moonshine-medium.json  moonshine-small.json  parakeet-tdt-0.6b-v3-onnx.json  report.html  summary.csv
benchmarks/suite_100/earnings22/: faster-whisper-large-v3-turbo.json  (+7 more)
parrot/: __init__.py  app.py  cleaner.py  config.py  inserter.py  recorder.py  status.py  transcriber.py
scripts/: benchmark_cleanup.py  benchmark_moonshine.py  benchmark_stt.py  benchmark_suite.py  build_rust.ps1  check_setup.ps1  download_whisper_cpp.ps1  download_whisper_models.ps1  moonshine_worker.py  package_windows.ps1  setup_models.py  setup_stt_benchmarks.ps1  setup_windows.ps1  stt_worker.py
src/: audio.rs  cleaner.rs  config.rs  hotkeys.rs  inserter.rs  main.rs  moonshine.rs  stt.rs  stt_worker.rs  vad.rs
(+8 files in other folders)
