[package]
name = "project-parrot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.18"
rdev = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
